--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,15 +31,19 @@ endif()
 
 include (CTest)
 
-if (MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /wd4232")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4 /wd4232")
-    # Make warning as error
-    add_definitions(/WX)
-else()
-    # Make warning as error
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
+option(enable_warnings "enable strict warnings-as-errors based on the compiler" ON)
+
+if (enable_warnings)
+    if (MSVC)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /wd4232")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4 /wd4232")
+        # Make warning as error
+        add_definitions(/WX)
+    else()
+        # Make warning as error
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
+    endif()
 endif()
 
 IF(WIN32)
