--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 endif()
 
 
-option(enable_warnings "enable strict warnings-as-errors based on the compiler" ON)
+option(enable_warnings "enable strict warnings-as-errors based on the compiler" OFF)
 
 if (enable_warnings)
     if (MSVC)
