--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Copyright (c) Microsoft. All rights reserved.
 # Licensed under the MIT license. See LICENSE file in the project root for full license information.
 
+set(OPENSSL_ROOT_DIR /usr/local/opt/openssl)
+
 cmake_minimum_required(VERSION 2.8.11)
 project(azure_iot_sdks)
 
